# automated-w2s-research

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Idea.md  README.md  entrypoint.sh  pyproject.toml  run.py  run.sh
.claude/: settings.json
.claude/skills/research-thinking/: SKILL.md
.github/workflows/: docker-image.yml
obversary-implementation/: README.md  behavioral_monitor.py  memory_substrate.py  multi_critic_evaluator.py  signal_detector.py
scripts/: docker-build-push.sh  prepare_data.py
w2s_research/: __init__.py  config.py
w2s_research/core/: __init__.py  config.py  data.py  eval.py  seed_utils.py  train.py  vllm_inference.py
w2s_research/ideas/: __init__.py
w2s_research/ideas/TEMPLATE/: run.py
w2s_research/ideas/critic/: __init__.py  binary_judge_prompt.jinja2  critic_grpo_config.yaml  critique_evaluation_prompt.jinja2  critique_prompt.jinja2  evaluate_critiques.py  judge_prompt.jinja2  reward_function.py  run.py  utils.py
w2s_research/ideas/critic/steps/: __init__.py  step10_generate_judge_labels.py  step11_sft_strong_model.py  step1_5_sft_critic_on_weak_demos.py  step2_generate_critiques_labeled.py  step3_train_judge.py  step4_generate_critiques_unlabeled.py  step5_create_grpo_dataset.py  step6_train_grpo.py  step7_generate_critiques_test_grpo.py  step8_evaluate_judge.py  step9_generate_critiques_unlabeled_grpo.py
w2s_research/ideas/train_only_on_confident_labels/: run.py
w2s_research/ideas/ue_fewshot/: experiment.py  run.py
w2s_research/ideas/ue_zeroshot/: experiment.py  math_eval_tools.py  math_normalize.py  run.py
w2s_research/ideas/vanilla_w2s/: loss.py  run.py
w2s_research/infrastructure/: __init__.py  execute_autonomous.py  runpod.py  s3_utils.py
w2s_research/research_loop/: __init__.py  agent.py  prompt.jinja2
w2s_research/research_loop/hooks/: log_tool_start.py  log_tool_usage.py  sync_to_s3.py
w2s_research/research_loop/telemetry/: __init__.py  tool_timing.py  usage_tracker.py
w2s_research/research_loop/tools/: __init__.py  findings_sync.py  http_utils.py  prior_work_tools.py  server_api_tools.py
w2s_research/utils/: __init__.py  hierarchical_cache.py  logging_utils.py  remote_evaluation.py
w2s_research/web_ui/backend/: app.py  config.py  evaluation.py  models.py  worker.py
w2s_research/web_ui/frontend/: package-lock.json  package.json
w2s_research/web_ui/frontend/public/: index.html
w2s_research/web_ui/frontend/src/: AddIdeaForm.js  App.js  Forum.js  IdeaList.js  Leaderboard.js  QueuePanel.js  StatusBadge.js  index.css
