[project]
name = "w2s-research"
version = "0.1.0"
description = "Automated Weak-to-Strong Research System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core ML
    "torch==2.8.0",
    "transformers[hf_xet]>=4.51.0",
    "tokenizers==0.22.1",
    "datasets==3.6.0",
    "accelerate==1.12.0",
    "peft==0.18.0",
    "trl==0.21.0",
    "bitsandbytes==0.46.1",
    "safetensors==0.7.0",
    "einops==0.8.1",
    "triton==3.4.0",
    # Fast training (Unsloth + LoRA)
    "unsloth==2025.10.12",
    "unsloth-zoo==2025.10.13",
    "liger-kernel==0.6.4",
    "cut-cross-entropy==25.1.1",
    # Fast inference
    "vllm==0.11.0",
    "flash-attn",
    # Scientific computing
    "scipy==1.16.3",
    "numpy<2.0.0",
    "scikit-learn==1.7.2",
    # Utils
    "tqdm==4.67.1",
    "python-dotenv==1.2.1",
    "PyYAML==6.0.3",
    "jinja2>=3.0",
    "httpx==0.28.1",
    "requests>=2.28.0",
    "packaging==25.0",
    "hf-transfer",
    "pylatexenc",
    "nvidia-ml-py>=12.560.30",
    # Tracking
    "wandb==0.23.0",
    # Agent
    "anthropic>=0.78.0",
    "claude_agent_sdk>=0.1.30",
    # Server
    "flask>=3.1.2",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.1.1",
    # Cloud
    "boto3>=1.28.0",
    "runpod>=1.5.0",
    # Dev
    "pytest",
    "ruff",
    # Extra inference
    "sglang[all]==0.5.2",
    "flashinfer-python==0.3.1",
    "torch-memory-saver",
    # VERL
    "ray[default]==2.52.0",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "tensordict>=0.8.0,<=0.10.0,!=0.9.0",
    "codetiming",
    "dill",
    "pybind11",
    "optree>=0.13.0",
    "grpcio>=1.62.1",
    # Extra tracking
    "weave==0.52.22",
    "tensorboard==2.20.0",
    # Extra utils
    "torchdata",
    "aiohttp==3.13.2",
    "fastapi[standard]>=0.115.0",
    "uvicorn==0.38.0",
    "pydantic>=2.9",
    "pyarrow>=15.0.0",
    "attrs==25.4.0",
    "matplotlib==3.10.7",
    "pandas==2.3.3",
    "rich==14.2.0",
    "loguru==0.7.3",
    "ninja==1.13.0",
    "qwen-vl-utils",
    "mathruler",
    "sentence-transformers==5.1.2",
    "opencv-python",
    "opencv-fixer",
    "py-spy",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["w2s_research"]

[tool.uv]
# Override conflicting dependencies
override-dependencies = [
    "setuptools>=79.0.0",
    "torchao>=0.13.0",  # unsloth needs >=0.13.0, sglang wants ==0.9.0
    "xgrammar==0.1.25",  # vllm needs ==0.1.25, sglang wants ==0.1.24
    "outlines-core==0.2.11",  # vllm needs ==0.2.11, sglang wants ==0.1.26
]

[tool.uv.sources]
# flash-attn from pre-built wheel (cu12, torch2.8, cxx11abi=False, cp312)
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.1/flash_attn-2.8.1+cu12torch2.8cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }
